k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: attendance-db
  namespace: attendance
spec:
  selector:
    app: attendance-db
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
